[gd_scene load_steps=6 format=3 uid="uid://df0p3tawo2arq"]

[ext_resource type="Script" path="res://Scenes/Combat/Combat.gd" id="1_i0ygr"]
[ext_resource type="PackedScene" uid="uid://yrt34rtqrinn" path="res://Scenes/Combat/Enemy.tscn" id="2_bxbvl"]
[ext_resource type="Theme" uid="uid://ca6asxvhlbu51" path="res://Art/Themes/MainMenuTheme.tres" id="3_f7su6"]
[ext_resource type="Material" uid="uid://bw7t51yw4ntnn" path="res://Scenes/Main/TransparencyShader.tres" id="4_ws6am"]

[sub_resource type="LabelSettings" id="LabelSettings_gbnm6"]
font_size = 24

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Combat" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i0ygr")

[node name="MarginContainer" type="MarginContainer" parent="Combat"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Combat/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Enemy" parent="Combat/MarginContainer/HBoxContainer" instance=ExtResource("2_bxbvl")]
visible = false
layout_mode = 2

[node name="Enemy2" parent="Combat/MarginContainer/HBoxContainer" instance=ExtResource("2_bxbvl")]
visible = false
layout_mode = 2

[node name="Enemy3" parent="Combat/MarginContainer/HBoxContainer" instance=ExtResource("2_bxbvl")]
visible = false
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Combat"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Combat/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Enemy" parent="Combat/MarginContainer2/HBoxContainer" instance=ExtResource("2_bxbvl")]
visible = false
layout_mode = 2

[node name="Enemy2" parent="Combat/MarginContainer2/HBoxContainer" instance=ExtResource("2_bxbvl")]
visible = false
layout_mode = 2

[node name="Enemy3" parent="Combat/MarginContainer2/HBoxContainer" instance=ExtResource("2_bxbvl")]
visible = false
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Combat"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MenuPanel" type="PanelContainer" parent="Combat/MarginContainer3"]
layout_mode = 2
theme = ExtResource("3_f7su6")

[node name="HBoxContainer" type="HBoxContainer" parent="Combat/MarginContainer3/MenuPanel"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_f7su6")

[node name="Attack" type="Button" parent="Combat/MarginContainer3/MenuPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Attack"

[node name="Skill" type="MenuButton" parent="Combat/MarginContainer3/MenuPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Skill"
flat = false
switch_on_hover = true

[node name="Item" type="MenuButton" parent="Combat/MarginContainer3/MenuPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Item"
flat = false
switch_on_hover = true

[node name="Flee" type="Button" parent="Combat/MarginContainer3/MenuPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Flee"

[node name="PlayerStats" type="Label" parent="Combat/MarginContainer3/MenuPanel/HBoxContainer"]
custom_minimum_size = Vector2(240, 180)
layout_mode = 2
text = "Player Stats"
label_settings = SubResource("LabelSettings_gbnm6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoPanel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("3_f7su6")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CenterContainer/VideoPanel"]
material = ExtResource("4_ws6am")
layout_mode = 2
expand = true
